# dekko

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.disabled  .gitman.yml  .gitmodules  .koding.yml  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  SnapStandardPaths.cpp  SnapStandardPaths.h  build-click  cmake  dekko.launcher  dekko.qbs  export-env-vars  gdb-dekko2  notify.qbs  plugman.qbs  qmf.qbs  qmldir  quickflux_plugin.cpp  requirements.txt  run-dekko2  setup-click-env  setup-dev-env  snap-dekko  snapcraft.yaml  standardpaths.qbs  super-macros.qbs  update-i18n
.click/: CMakeLists.txt  dekko-helper.json  dekko-launch  dekko.apparmor  dekko.dekkoproject_dekko.application  dekkohelper-aa.json
Dekko/Mail/server/: CMakeLists.txt  main.cpp  messageserver.cpp  server.qbs
Dekko/libs/autoconfig/: CMakeLists.txt
app/: CMakeLists.txt  Dekko.cpp  Dekko.h  main.cpp
app/configuration/: serviceProviders.conf  styles.conf
app/icons/actions/: actionicons.qrc
app/icons/filetypes/: filetypeicons.qrc
app/icons/providers/: providericons.qrc
app/qml/: Dekko.qml  dekkoqml.qrc  main.qml
app/qml/actions/: ACTIONSREADME.md  ActionTypes.qml  DekkoActions.qml  dekkoactions.qrc  qmldir
app/qml/components/: ActionDrawer.qml  Animations.qml  AttachmentPanel.qml  CachedImage.qml  ContextGroup.qml  DekkoHeader.qml  DekkoPage.qml  FilterBar.qml  FlipableSelectionAvatar.qml  HeaderButton.qml  HorizontalGradiant.qml  ListItemWithActions.qml  ListItemWithActionsCheckBox.qml  Logger.qml  NavigationDrawer.qml  NavigationGroup.qml  TabBar.qml  UbuntuShapeGravatar.qml
app/qml/constants/: Constants.qml  DekkoAnimation.qml  MailUtils.qml  Style.qml  dekkocontants.qrc  qmldir
app/qml/delegates/: ContextDelegate.qml  FolderListDelegate.qml  MessageListDelegate.qml  NavMenuStandardFolderDelegate.qml
app/qml/dialogs/: ConfirmationDialog.qml  DialogQueue.qml
app/qml/models/: NavMenuAccountSettingsModel.qml  NavMenuModel.qml
app/qml/popovers/: MessageDetailsPopover.qml  MessageListActionPopover.qml  NoticePopup.qml  RecipientPopover.qml
app/qml/setupwizard/: SetupWizard.qml
app/qml/stores/: qmldir  (+4 more)
lib/accounts/: Account.cpp  Account.h  AccountConfiguration.cpp  AccountConfiguration.h  AccountValidator.cpp  AccountValidator.h  Accounts.cpp  Accounts.h  CMakeLists.txt
lib/mail/: Attachments.cpp  Attachments.h  CMakeLists.txt  Client.cpp  Client.h  ClientService.cpp  ClientService.h  ClientServiceAction.cpp  ClientServiceAction.h  Folder.cpp  Folder.h  FolderList.cpp  FolderList.h  MailAddress.cpp  MailAddress.h  MailboxSearch.cpp  MailboxSearch.h  Message.cpp  Message.h  MessageBuilder.cpp  MessageBuilder.h  MessageFilterCollection.cpp  MessageFilterCollection.h  MessageList.cpp  MessageList.h  MessageSet.cpp  MessageSet.h  SearchService.cpp  SearchService.h  SenderIdentities.cpp  SenderIdentities.h  SubmissionManager.cpp  SubmissionManager.cpp.autosave  SubmissionManager.h
lib/network/: CMakeLists.txt  ForbiddenReply.cpp  ForbiddenReply.h  MsgPartQNAM.cpp  MsgPartQNAM.h  MsgPartQNAMFactory.cpp  MsgPartQNAMFactory.h  MsgPartReply.cpp  MsgPartReply.h  MsgReply.cpp  MsgReply.h
lib/settings/: CMakeLists.txt  GlobalSettings.cpp  GlobalSettings.h  NavigationSettings.cpp  NavigationSettings.h  PolicyManager.cpp  PolicyManager.h  SettingsFileBase.cpp  SettingsObjectBase.cpp  SettingsObjectBase.h  SettingsPolicies.cpp  SettingsPolicies.h
libs/: CMakeLists.txt
libs/accounts/: AccountConfiguration.h
libs/addressbook2/: CMakeLists.txt
libs/mail/: Attachments.cpp  MessageSet.cpp  SenderIdentities.cpp
libs/network/: MsgPartQNAMFactory.cpp
libs/settings/: CMakeLists.txt  PolicyManager.cpp  SettingsFileBase.h  SettingsObjectBase.cpp
libs/shared/: CMakeLists.txt  Paths.cpp
plugins/accounts/: Account.cpp  Account.h  AccountConfiguration.cpp  AccountConfiguration.h  AccountValidator.cpp  Accounts.cpp  Accounts.h  AccountsPlugin.cpp  AccountsPlugin.h  CMakeLists.txt  PresetProviderModel.cpp  PresetProviderModel.h  qmldir
plugins/autoconfig/: CMakeLists.txt  autoconfig.cpp  autoconfig.h  autoconfigplugin.cpp  autodiscover.cpp  autodiscover.h  emailprovider.cpp  emailprovider.h  qmldir  serverconfiguration.cpp
plugins/components/: CMakeLists.txt  ComponentsPlugin.cpp  ComponentsPlugin.h  Helpers.h  ImageHelper.cpp  ImageHelper.h  Introspector.cpp  Introspector.h  LogRecorder.cpp  LogRecorder.h  Paths.cpp  Paths.h  PixelPerfectItem.cpp  PixelPerfectItem.h  StretchColumn.cpp  StretchColumn.h  StretchRow.cpp  StretchRow.h  Stretcher.h
plugins/contacts/: AddressBook.cpp  AddressBook.h  AddressBooks.cpp  AddressBooks.h  CMakeLists.txt  CombinedAddressBookModel.cpp  CombinedAddressBookModel.h  Contact.cpp  Contact.h  ContactsPlugin.cpp  ContactsPlugin.h  ContactsPluginInterface.h  ContactsPluginLoader.cpp  ContactsPluginLoader.h  PluginTask.cpp  PluginTask.h  QuickContactsPlugin.cpp  QuickContactsPlugin.h  SearchFilter.cpp  SearchFilter.h  SortedContactsModel.cpp  SortedContactsModel.h  qmldir
plugins/mail/: CMakeLists.txt  MailPlugin.cpp  MailPlugin.h  qmldir  qmlenums.cpp  qmlenums.h
plugins/settings/: CMakeLists.txt  SettingsPlugin.cpp  SettingsPlugin.h  qmldir
plugins/shared/: CMakeLists.txt  Formatting.cpp  Formatting.h  Helpers.h  Paths.cpp  Paths.h  QmlObjectListModel.h
server/: CMakeLists.txt  messageserver.cpp  messageserver.h
src/: ActionRegistry.cpp  ActionRegistry.h  CMakeLists.txt  ControlsPlugin.h  ItemRegistry.cpp  ItemRegistry.h  ListenerRegistry.cpp  MazDB.h  MazDBLib.qbs  MazDBListModel.cpp  MazDBListModel.h  MazDBQuery.cpp  MazDBQuery.h  MazDBQueryEngine.cpp  MazDBSettings.h  MazDBSortProxy.cpp  MazOptions.cpp  MazUtils.h  NotifyConfiguration.qml  NotifyQueue.qml  PluginIncubator.cpp  PluginIncubator.h  PluginInfo.h  qmldir
src/quick/: MazDBQuick.qbs  QuickPlugger.h  qmldir
upstream/controls/: .gitman.yml  CMakeLists.txt  controls.qbs
upstream/notify/: CMakeLists.txt  README.md
upstream/plugman/: CMakeLists.txt  plugman.qbs
upstream/quick-flux/: .gitmodules  CMakeLists.txt  qmldir  quickflux.qbs  quickflux_plugin.h
(+1387 files in other folders)
